# ESP_S3_I2C_IMU_BMI085_LED_WS2812

./: README.md
ESP32C3_BMI085_WS2812/: sdkconfig
ESP32C3_BMI085_WS2812/main/: CMakeLists.txt  main.c
ESP32C3_BMI085_WS2812/main/BMI085IMUDriver/: bmi085Driver.c  bmi085Driver.h
ESP32C3_BMI085_WS2812/main/BMI085IMUDriver/BMI08x-Sensor-API-master/: README.md  bmi08a.c  bmi08g.c
ESP32C3_BMI085_WS2812/main/BMI085IMUDriver/common/: common.c  common.h
ESP32C3_BMI085_WS2812/main/RMTLEDDriver/: LedDriver.c  LedDriver.h
ESP32C3_BMI085_WS2812/main/RMTLEDDriver/lib/: led_strip_rmt_encoder.h
